name:                grendy-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/grendy-api#readme
license:             BSD3
license-file:        LICENSE
author:              Fabian Beuke
maintainer:          mail@beuke.org
copyright:           2017 Fabian Beuke
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Grendy.BigQuery
                     , Data.Grendy.GraphQL
  build-depends:       base >= 4.7 && < 5
                     , template-haskell
                     , string-conversions
                     , aeson
                     , wreq
                     , lens
                     , utf8-string

  default-language:    Haskell2010
executable grendy-api-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , grendy-api
                     , scotty
                     , bytestring
                     , aeson-qq
                     , utf8-string
                     , template-haskell
                     , http-client-tls
                     , lens
                     , text
                     , aeson
                     , attoparsec
                     , http-types
                     , string-conversions
                     , unordered-containers
                     , wreq
                     , http-conduit
                     , http-client
  default-language:    Haskell2010

test-suite grendy-api-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , grendy-api
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/grendy-api
